#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-03
2015-10-26 Mikhail S. Dubrovin
- PyDetectorAccess.py - apply cashing of index arrays in indexes_x/y(...) and image(...)
	previously it was done in PSCalib.GeometryAccess after searching of the top object, that takes time (PSAS-139)

Tag: V00-02-02
2015-10-26 Mikhail S. Dubrovin
- AreaDetector.py add protection in image(); return None if det.calib() is None (PSAS-139)

Tag: V00-02-01
2015-10-16 Mikhail S. Dubrovin
- split PyDetector.py in to AreaDetector.py and WFDetector.py, convert PyDetector.py to factory-class (PSAS-139)
- add ex_evt_keys.py, ex_time_fiducials.py

Tag: V00-01-13
2015-10-15 Mikhail S. Dubrovin
- add examples ex_time_fiducials.py, ex_evt_keys.py

Tag: V00-01-12
2015-10-14 Mikhail S. Dubrovin
- Fix crash if detector source is missing in data (PSAS-139)
  - PyDetector.py in _nda_or_none_ - return None if nda is None

Tag: V00-01-11
2015-10-14 Mikhail S. Dubrovin
- Add support for Rayonix (PSAS-139)

Tag: V00-01-10
2015-10-06 Mikhail S. Dubrovin
- Add support for Quartz4A150 (PSAS-139)
  in PyDataAccess.py add get_quartz_data_object(..), get_quartz_config_object(..)
  in PyDetectorAccess.py add QUARTZ4A150 in raw_data(...)
  add ex_quartz.py, update ex_all_dets.py

Tag: V00-01-09
2015-10-01 Christopher O'Grady
- Fix error in autogenerated documentation introduced in V00-01-07:
  change "import _psana" back to "import psana".

Tag: V00-01-08
2015-09-30 David Schneider
- change an abort() call to throw exception to keep user ipython session running

Tag: V00-01-07
2015-09-25 TJ Lane
- Changed import psana to import _psana to break circular dependency in psana